<resources>
    <string name="app_name">ABCZone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account ? Login here</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="read">Read</string>
    <string name="stories">Stories</string>
    <string name="abczone">ABCZone</string>
    <string name="best_way_to_learn_english_with_your_child">Best way to learn english with your child</string>
    <string name="start_to_learn">Start to learn</string>
    <string name="reset_password">Reset Password</string>
    <string name="learn_and_have_fun">Learn and have fun</string>
    <string name="audio_books">Audio Books</string>
    <string name="listen">Listen</string>
    <string name="music">Music</string>
    <string name="short_movies">Short Movies</string>
    <string name="watch">Watch</string>
    <string name="lang">Lang</string>
    <string name="ants_and_pen">Ants and pen</string>
    <string name="speak_first">Speak first</string>
    <string name="the_onion">The Onion</string>
    <string name="ant_and_dove">Ant and Dove</string>
    <string name="cowboy">Cowboy</string>
    <string name="watch_short_movies">Watch short movies</string>
    <string name="child_s_name">Child\'s name</string>
    <string name="age">Age</string>
    <string name="welcome">Welcome</string>
    <string-array name="text">
        <item>Know how to spell...?</item>
        <item>But, dont know how to write</item>
        <item>Lets learn now</item>
    </string-array>

    <string name="hyperlinks">This application was created by<a href="https://www.linkedin.com/in/rinesa-muharremi/"> RM</a> and<a href="https://www.linkedin.com/in/linda-imeri-40bbb5197/"> LI</a>.</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>

</resources>