<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/Language"
            android:icon="@drawable/language"
            android:title="@string/language" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/aboutUs"
            android:title="@string/about_us"
            android:icon="@drawable/about"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/exit"
            android:title="@string/logout" />
    </group>

</menu>