<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:id="@+id/content"
    tools:context=".Register">


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:ems="12"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/gray"
            app:backgroundTint="@color/orange" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/gray"
            app:backgroundTint="@color/orange" />


        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/name"
            android:drawablePadding="12dp"
            android:ems="12"
            android:hint="@string/child_s_name"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/gray"
            app:backgroundTint="@color/orange" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/age"
            android:drawablePadding="12dp"
            android:ems="12"
            android:hint="Age"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/gray"
            app:backgroundTint="@color/orange" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_style"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

    </LinearLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="-30dp"
        android:src="@drawable/panda_sitting" />

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:srcCompat="@drawable/back" />


</RelativeLayout>