<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioBooks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:srcCompat="@drawable/back" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@color/orange">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="25dp"
                    android:text="@string/cowboy"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/read1"
                    android:layout_width="132dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/button_style"
                    android:padding="2dp"
                    android:text="@string/listen" />


            </RelativeLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="-10dp"
                android:src="@drawable/cowboy" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="#a84432">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:src="@drawable/theantanddove" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:fontFamily="sans-serif"
                android:padding="25dp"
                android:text="@string/ant_and_dove"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/read2"
                android:layout_width="132dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_style"
                android:padding="2dp"
                android:text="@string/listen" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@color/green">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="25dp"
                    android:text="@string/the_onion"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/read3"
                    android:layout_width="132dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_style"
                    android:padding="2dp"
                    android:text="@string/listen" />


            </RelativeLayout>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-40dp"
                android:src="@drawable/theonion" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@color/orange">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/speakfirst" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif"
                android:padding="25dp"
                android:text="@string/speak_first"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/read4"
                android:layout_width="132dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_style"
                android:padding="2dp"
                android:text="@string/listen" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@color/teal_700">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="25dp"
                    android:text="@string/ants_and_pen"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/read5"
                    android:layout_width="132dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_style"
                    android:padding="2dp"
                    android:text="@string/listen" />


            </RelativeLayout>

            <ImageView
                android:layout_width="190dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-40dp"
                android:src="@drawable/theants" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>